--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "wyattcast44/laravelschema",
     "description": ":description",
-    "license": "license",
+    "license": "MIT",
     "authors": [
         {
             "name": "Wyatt",
