--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
         "doctrine/dbal": "^2.9"
     },
     "require-dev": {
-        "phpunit/phpunit": "~7.0",
+        "phpunit/phpunit": "^8.4",
         "mockery/mockery": "^1.1",
-        "orchestra/testbench": "~3.0",
+        "orchestra/testbench": "^5.0",
         "sempro/phpunit-pretty-print": "^1.0"
     },
     "autoload": {
