--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "wyattcast44/laravelschema",
+    "name": "wyattcast44/laravel-schema",
     "description": ":description",
     "license": "MIT",
     "authors": [
@@ -12,7 +12,8 @@
     "homepage": "https://github.com/wyattcast44/laravelschema",
     "keywords": [
         "Laravel",
-        "LaravelSchema"
+        "Schema",
+        "Laravel Schema"
     ],
     "require": {
         "illuminate/support": "~5|~6|~7",
