--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,13 @@
         "Laravel Schema"
     ],
     "require": {
-        "illuminate/support": "~5|~6|~7",
+        "illuminate/support": "~5|~6|~7|~8",
         "doctrine/dbal": "^2.9"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.4",
         "mockery/mockery": "^1.1",
-        "orchestra/testbench": "^5.0",
+        "orchestra/testbench": "~5.0|~6.0",
         "sempro/phpunit-pretty-print": "^1.0"
     },
     "autoload": {
