--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         "Laravel Schema"
     ],
     "require": {
-        "illuminate/support": "~5|~6|~7|~8",
-        "doctrine/dbal": "^2.9"
+        "illuminate/support": "~7|~8",
+        "doctrine/dbal": "^2.9|^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.4",
